auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_tentative_def.c
struct s;






static struct s x;

int main(void) { return 0; }